--- a/observability/promtail-config.yml
+++ b/observability/promtail-config.yml
@@ -14,5 +14,5 @@ scrape_configs:
       - targets:
           - localhost
         labels:
-          job: varlogs
+          job: gin-app
           __path__: /var/log/*log
