--- a/observability/grafana-datasources.yaml
+++ b/observability/grafana-datasources.yaml
@@ -4,7 +4,7 @@ datasources:
   - name: Loki
     type: loki
     access: proxy
-    url: http://loki:3100
+    url: http://172.16.238.10:3100
     isDefault: true
     uid: ab7e152f-95e7-454e-9285-65da8d67a3d2
   - name: Prometheus
