--- a/observability/promtail-config.yml
+++ b/observability/promtail-config.yml
@@ -6,7 +6,7 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://loki:3100/loki/api/v1/push
+  - url: http://172.16.238.10:3100/loki/api/v1/push
 
 scrape_configs:
   - job_name: system
@@ -15,4 +15,4 @@ scrape_configs:
           - localhost
         labels:
           job: gin-app
-          __path__: /var/log/*log
+          __path__: /var/log/app.log
