--- a/observability/grafana-datasources.yaml
+++ b/observability/grafana-datasources.yaml
@@ -4,10 +4,11 @@ datasources:
   - name: Loki
     type: loki
     access: proxy
-    url: http://172.16.238.10:3100
+    url: http://loki:3100
     isDefault: true
     uid: ab7e152f-95e7-454e-9285-65da8d67a3d2
+
   - name: Prometheus
     type: prometheus
     access: proxy
-    url: http://prometheus:9090 
+    url: http://prometheus:9090
