--- a/observability/promtail-config.yml
+++ b/observability/promtail-config.yml
@@ -6,13 +6,12 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: http://172.16.238.10:3100/loki/api/v1/push
+  - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
   - job_name: system
     static_configs:
-      - targets:
-          - localhost
+      - targets: [localhost]
         labels:
           job: gin-app
-          __path__: /var/log/app.log
+          __path__: /var/log/*.log
