feat: added event emitters and producer

--- a/observability/docker-compose.yml
+++ b/observability/docker-compose.yml
@@ -19,6 +19,7 @@ services:
 
       - USER_IMPORT_WORKERS=10
 
+      - KAFKA_BROKERS=kafka:29092
     # ensures host.docker.internal works on Linux (Docker 20.10+)
     extra_hosts:
       - "host.docker.internal:host-gateway"
@@ -47,6 +48,31 @@ services:
       - "host.docker.internal:host-gateway"
     networks:
       - monitoring
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.0.1
+    networks:
+      - monitoring
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka:
+    image: confluentinc/cp-kafka:7.0.1
+    networks:
+      - monitoring
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
   prometheus:
     image: prom/prometheus:v2.47.2
