fix: fixed some kafka problem

--- a/observability/docker-compose.yml
+++ b/observability/docker-compose.yml
@@ -54,7 +54,8 @@ services:
     networks:
       - monitoring
     depends_on:
-      - kafka
+      kafka:
+        condition: service_healthy
     environment:
       - KAFKA_BROKERS=kafka:29092
 
@@ -74,6 +75,18 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "kafka-topics",
+          "--bootstrap-server",
+          "localhost:9092",
+          "--list",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
@@ -82,6 +95,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_CREATE_TOPICS: "team.activity:1:1,asset.changes:1:1"
 
   prometheus:
     image: prom/prometheus:v2.47.2
