--- a/observability/docker-compose.yml
+++ b/observability/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 networks:
   monitoring:
     driver: bridge
@@ -20,9 +18,15 @@ services:
       - USER_IMPORT_WORKERS=10
 
       - KAFKA_BROKERS=kafka:29092
+
+      - REDIS_URL=redis:6379
+
     # ensures host.docker.internal works on Linux (Docker 20.10+)
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      - kafka
+      - redis
     networks:
       - monitoring
 
@@ -58,6 +62,17 @@ services:
         condition: service_healthy
     environment:
       - KAFKA_BROKERS=kafka:29092
+
+  caching-service:
+    build: ../caching-service
+    networks:
+      - monitoring
+    depends_on:
+      - kafka
+      - redis
+    environment:
+      - KAFKA_BROKERS=kafka:29092
+      - REDIS_URL=redis:6379
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.3
@@ -96,6 +111,22 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_CREATE_TOPICS: "team.activity:1:1,asset.changes:1:1"
+  redis:
+    image: redis:alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - monitoring
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
+      - ./data/redis:/data
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
   prometheus:
     image: prom/prometheus:v2.47.2
